--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
+backend/node_modules/
+front/node_modules/
 node_modules/
 jspm_packages/
 
